package net.bakaar.sandbox.domain.person;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
class SearchPersonQuery {
    private String name;
    private String socialSocialNumber;
}
