@startuml
package Person {
    class PersonApplicationService <<application service>> {
        + createPerson(CreatePersonCommand) : Person
        + addSecondaryAddressToPerson(PNumber,AddressNumber) : Person
        + removeSecondaryAddress(PNumber, AddressNumber) : Person
        + relocatePerson(PNumber, AddressNumber): Person
        + changeName(PNumber, PostalLine) : Person
        ...()
    }
    class PersonFactory <<service>> {
        - idRepository : BusinessNumberRepository
        + createPerson (CreatePersonCommand) : Person
    }
    class PersonRepository <<repository>> {
        + putPerson(Person) : Person
        + fetchPersonById(PNumber) : Person
        + searchPerson(SearchPersonQuery) : List<Person>
    }
    class CreatePersonCommand <<vo>> {
        - name : String
        - forename : String
        - birthDate : LocalDate
        - socialSecurityNumber : String
        - mainAddressNumber : PersonalAddress
    }
    class SearchPersonQuery <<vo>> {
        - name : String
        - socialSecurityNumber : String
    }
    class Person <<root entity>> {
        - id : PNumber
        - forename : PostalLine
        - name : PostalLine
        - birthDate : LocalDate
        - socialSecurityNumber : SocialSecurityNumber¨
        - mainAddressNumber : PersonalAddress
        - secondaryAddresses : List<PersonalAddress>
        + move(PersonalAddress) : void
        + addSecondaryAddress(PersonalAddress) : void
        + removeSecondaryAddress(PersonalAddress) : void
        + secondaryAddresses() : List<PersonalAddress>
        + mainAddressNumber() : PersonalAddress
    }
    class PersonalAddress <<vo>> {
        - id : AddressNumber
        - addressNumber : String
    }
    class PostalLine <<vo>> {
        - line : String
    }
    class SocialSecurityNumber <<vo>> {
        number : long
    }
    PersonApplicationService -- PersonFactory
    PersonApplicationService -- PersonRepository

    PersonFactory -- CreatePersonCommand

    PersonRepository -- Person
    PersonRepository -right- SearchPersonQuery

    Person -- PostalLine
    Person o-- PersonalAddress
    Person -right- SocialSecurityNumber

    CreatePersonCommand -- PersonalAddress

}

package Address {
    class AddressApplicationService <<application service>> {
        + createAddress(CreateAddressCommand) : Address
        + changeStreetName(AddressNumber, String) : Address
    }
    class AddressFactory <<service>> {
        - idRepository : BusinessNumberRepository
        + createAddress (CreateAddressCommand) : Address
    }
    class AddressRepository <<repository>> {
        + putAddress(Address) : Address
    }
    class CreateAddressCommand <<vo>> {
        - addressNumber : String
        - main : boolean
    }
    class Address <<root entity>> {
        - id : AddressNumber
        - addressNumber : String
    }

    AddressApplicationService -- AddressRepository
    AddressApplicationService -- AddressFactory

    AddressFactory -- CreateAddressCommand

    AddressRepository -- Address
}

package shared {
    class AddressNumber <<vo>>
    class PNumber <<vo>>

    abstract BusinessNumber <<vo>> {
        - number : long
        {abstract} format() : String
    }

    PNumber --|> BusinessNumber
    
    AddressNumber --|> BusinessNumber
}

Address -- AddressNumber
PersonalAddress -- AddressNumber
Person -> PNumber

legend left
- PNumber has format 'P' followed by 8 digits (ex : P12345678)
- PostalLine can only contains 30 characters
- SocialSecurityNumber is 13 digits number which begin by '756' that is formatted in string as 756.XXXX.XXXX.XX

end legend

@enduml